会员管理系统java

--- a/usermanage-web/src/main/resources/jdbc.properties
+++ b/usermanage-web/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 user=root
-password=root
-url=jdbc:mysql://localhost:3306/mybatis
+password=fantastu7
+url=jdbc:mysql://47.99.111.209:3306/mybatis
 driverClassName=com.mysql.jdbc.Driver
